# poetry

./: .env.example  .gitignore  DUPLICATE_AUDIT.md  MULTI_SOURCE_INGEST.md  Makefile  README.md  RUNNING_ON_CLUSTER.md  pyproject.toml  requirements-app.txt  requirements-core.txt  requirements-gpu.txt  requirements-llm.txt  requirements.txt  test-complete-fix-91530.out  test-daemon-91524.err  test-daemon-91524.out  test-daemon-scoring-91525.err  test-daemon-scoring-91525.out  test-gradient-91526.err  test-gradient-91526.out  test-optional-chol-91527.out  test-pybind11-91529.err  test-pybind11-91529.out  test-pybind11-91539.err  test-pybind11-91539.out  test_native_direct.sh  test_old_scalapack_path.sh
app/: streamlit_app.py
configs/: poetry_sources.json  poetry_sources.template.json
docs/: ACQUISITION_FUNCTIONS.md  BACKEND_SELECTION.md  BENCHMARKING_GUIDE.md  CHALLENGES_AND_SOLUTIONS.md  CLUSTER_UMAP.md  CORPUS_BUILDING.md  CURRENT_ROADMAP.md  GPU_SPATIAL_VARIANCE.md  HPC_IMPLEMENTATIONS.md  METHOD_NARRATIVE.md  MILESTONE_1B_DESIGN.md  NATIVE_HPC_ROADMAP.md  NEXT_STEPS_AFTER_PYBIND11.md  POET_SELECTION_AND_IMPUTATION.md  RUNNING_BENCHMARKS.md  SCALAPACK_BACKEND.md  SHARED_DATA_SETUP.md
docs/archive/: FULL_PIPELINE_HPC_ROADMAP.md  NATIVE_LAPACK_USAGE.md  OPTIONAL_CHOL_FIX_SUMMARY.md  PYBIND11_INTEGRATION.md  QUICK_START_PYBIND11.md
native/: CMakeLists.txt  pybind11_lapack.cpp  scalapack_daemon.cpp  scalapack_gp_fit.cpp  scalapack_gp_fit_entry.cpp
scripts/: README.md  activate_env.sh  bench_mpi_step.py  bench_mpi_sweep.py  bench_overhead_crossover.py  bench_performance_sweep.slurm  bench_scaling_theory.py  bench_score_backends.slurm  bench_scoring.py  bench_step.py  bench_sweep.py  bench_time_breakdown.py  blocksize_sweep.slurm  bootstrap_env.sh  bootstrap_venv.sh  build_poet_centroids.py  build_poetry_corpus.py  check_env.py  check_gpu.py  compare_fit_backends.py  compare_fit_batch.slurm  compare_fit_only_sweep.slurm  debug_auto_vs_scalapack.slurm  debug_cpp_direct.slurm  debug_dgemm.slurm  debug_scalapack_slowness.slurm  demo_scaling_plots.py  diagnose_backend.py  diagnose_backend_python.py  fetch_prepare_multi_source_poetry.py  fetch_prepare_public_domain_poetry.py  fetch_public_domain_poetry.py  gpu_scoring_bench.slurm  inspect_hf_poetry_dataset.py  interactive_cli.py  large_scale_bench.slurm  pedagogical_benchmarks.slurm  plot_all_benchmarks.py  plot_benchmarks.py  plot_benchmarks_csv.py  (+34 more)
scripts/app/: apply_llm_imputation_results.py  audit_corpus_build.py  blr_baseline_demo.py  build_poet_centroids.py  check_llm_batch.py  download_llm_batch.py  embed_poems.py  impute_missing_metadata.py  interactive_cli.py  plot_heatmap_demo.py  project_poet_centroids_2d.py  query_by_poem.py  render_session_plots.py  run_scalapack_fit_demo.py  submit_llm_batch.py  submit_projection_pipeline.sh
scripts/archive/: bench_scalapack_fit.py  bench_sweep.py  slurm_submit_mpi.sh
scripts/debug/: test_daemon_scoring.py  test_gradient_optimization.py  test_lapack_minimal.py  test_large_fit.py  test_large_fit.slurm  test_parallel_assembly.slurm  test_scalapack_daemon.py  test_scalapack_fit.py
slides/: FAQ.md  FINAL_CHECKLIST.md  QUICK_START.md  README.md  READY_FOR_CLASS.md  build_slides.sh  create_1d_gp_example.py  create_benchmark_plots.py  presentation.md
slides/docs/: ORGANIZATION.md  PRESENTATION_SUMMARY.md
slides/example-1/: README.md
slides/example-1a/: README.md
slides/example-1b/: README.md
slides/example-1c/: README.md  fit_benchmark.slurm  plot_fit_results.py  plot_score_results.py  score_benchmark.slurm
slides/example-2/: README.md  fit_benchmark.slurm  visualize_2d_gp.py
slides/example-3/: README.md  plot_score_results.py  score_benchmark.slurm
slides/example-4/: README.md
slides/scripts/: create_1d_gp_example.py  create_benchmark_plots.py  create_posterior_heatmap.py  create_sample_score_data.py  install_git_hook.sh  pre-commit-hook.sh  update_figure_paths.sh
src/poetry_gp/: __init__.py  blr.py  canonical_poets.py  config.py  corpus_builder.py  data_utils.py  gp_exact.py  heatmap.py  kernel.py  profiling.py  reducer_2d.py  session_viz.py  source_registry.py
src/poetry_gp/backends/: backend_selection.py  blocked.py  gpu_scoring.py  mpi.py  naive.py  native_lapack.py  scalapack_daemon_client.py  scalapack_fit.py  scoring.py
