[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poetry-gp"
version = "0.1.0"
description = "Interactive poetry exploration with exact Gaussian-process preference modeling"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "pandas>=2.1",
  "matplotlib>=3.8",
  "sentence-transformers>=3.0",
  "huggingface_hub>=0.24",
  "datasets>=2.20",
  "mpi4py>=3.1",
  "streamlit>=1.36",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
